--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "url": "https://twitter.com/Scrum_"
   },
   "main": "src/input-is-empty.js",
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
     "version": "conventional-changelog -i changelog.md -s -r 0 && git commit -am \"build: update changelog\"",
     "test": "testcafe all:headless test/e2e/test.js"
@@ -40,7 +43,7 @@
     "eslint-plugin-testcafe": "^0.2.1",
     "eslint-plugin-unicorn": "^5.0.0",
     "http-server": "^0.11.1",
-    "husky": "^1.0.0-rc.13",
+    "husky": "^1.1.2",
     "lint-staged": "^7.2.2",
     "rimraf": "^2.6.1",
     "testcafe": "^0.22.0"
@@ -53,12 +56,14 @@
     }
   },
   "lint-staged": {
-    "src": "eslint",
-    "test": "eslint",
-    "*.md": "eslint"
+    "{src, test}": "eslint",
+    "{*.html,*.md}": "eslint"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaVersion": 6
+    },
     "plugins": [
       "testcafe",
       "dependencies",
@@ -71,6 +76,9 @@
       "plugin:unicorn/recommended",
       "xo"
     ],
+    "env": {
+      "browser": true
+    },
     "rules": {
       "indent": [
         2,
@@ -79,7 +87,8 @@
           "SwitchCase": 1
         }
       ],
-      "capitalized-comments": "off"
+      "capitalized-comments": "off",
+      "no-new": "off"
     }
   },
   "clinton": {
@@ -89,12 +98,9 @@
       "*.{html,jpg}"
     ],
     "rules": {
-      "pkg-main": [
-        "off"
-      ],
-      "xo": [
-        "off"
-      ]
+      "pkg-main": "off",
+      "xo": "off",
+      "ava": "off"
     }
   }
 }
