build: remove handless for all

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "version": "conventional-changelog -i changelog.md -s -r 0 && git add changelog.md",
-    "test": "testcafe all:headless test/e2e/test.js"
+    "test": "testcafe all test/e2e/test.js"
   },
   "files": [
     "src/"
