--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: node_js
-node_js:
-  - v10
+node_js: "10"
 
 dist: trusty
 sudo: required
@@ -12,3 +11,9 @@ addons:
       - google-chrome
     packages:
       - google-chrome-stable fluxbox
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3
+  - fluxbox >/dev/null 2>&1 &
